
  o  bols(x, intercept = FALSE) only reasonable if x is centered

  o  bbs(x, cyclic = TRUE) for cyclic covariates ensures that
     predictions at the boundaries coincide and that the resulting
     function estimate is smoothly joined

  o  added extract() methods for base-learners and fitted models

  o  added residuals() function to extract residuals from the
     model

  o  added family for AUC loss function (AUC())

  o  changed behavior of cvrisk() if weights are used:
     out-of-bag-risk now weighted according to "weights" as
     specified in call to mboost

  o  improved predict.mboost(): added names where missing and the
     offset as attribute where applicable.

  o  changed default in glmboost() to center = TRUE

  o  fixed bug in predict() with glmboost.matrix(..., center = TRUE)

  o  coef now also works with tree base-learners
     (returns NULL in this case)

  o  changed coef.gamboost to coef.mboost

  o  changed default for degrees of freedom in bspatial()
     to df = 6

  o  added checks in bbs (and brandom) to ensure that the specified
     degrees of freedom are greater than the range of the (unpenalized)
     null space

  o  added warning if df2lambda is likely to become numerically
     instable (i.e. in the case of large entries in the design matrix)


                CHANGES in `mboost' VERSION 2.0-4 (2010-04-15, r490)

  o  new vignette "mboost" describing 2.0-x series features

  o  fixed bug in bols(): contrast.arg was ignored if not a named list
     (which is wasn't per default)

  o  added (missing) response functions to families Weibull(),
     Loglog(), Lognormal() and NBinomial()

  o  fixed bug in family CoxPH which occured with NAs

  o  improvements and corrections in documentation


                CHANGES in `mboost' VERSION 2.0-3 (2010-03-10, r456)

  o  glmboost(..., center = TRUE) now also centers columns of the
     design matrix corresponding to contrasts of factors