@@ -12,7 +12,7 @@ export(glmboost,
        blackboost,
        mboost,
        boost_control, mstop, Family,
-       GaussReg, Gaussian, GaussClass, Laplace, Binomial, Poisson, QuantReg,
+       GaussReg, Gaussian, GaussClass, Laplace, Binomial, Poisson, GammaReg, QuantReg,
        ExpectReg, NBinomial, PropOdds, Weibull, Loglog, Lognormal, AUC, mboost_fit,
        Huber, AdaExp, CoxPH, FP, IPCweights, cvrisk, cv, bbs, stabsel,
        bols, bspatial, brandom, btree, bss, bns, brad, bmono, bmrf, buser, survFit, selected,
